[project]
name = "frappe_s3_attachment"
authors = [
    { name = "osama.ahmed@deliverydevs.com", email = "osama.ahmed@deliverydevs.com"}
]
description = "Frappe app to make file upload to S3 through attach file option."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "python-magic==0.4.18"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
